# librecollect

./: CMakeLists.txt  README.md  test.cmake
include/: recollect.hpp
include/recollect/: ConnectionMeans.hpp  Error.hpp  Memcache.hpp  OverwriteBehavior.hpp  Value.hpp  common.hpp  fwd.hpp
src/: ConnectionMeans.cpp  behavior.cpp  clear.cpp  delete.cpp  flush.cpp  get.cpp  has.cpp  insertion.cpp  lifetime.cpp  numeric.cpp  set.cpp
test/: main.cpp
test/Tests/: behavior.cpp  flush.cpp  get_set_clear_has_delete.cpp  handle.cpp  increment_decrement.cpp  instance.hpp  prepend_append.cpp
